# RISC-V-simplest-sim

./: .gitignore  CMakeLists.txt  System.cpp  System.h  main.cpp  riscv_visualizer.py  types.h
CPU/: cpu.cpp  cpu.h
CPU/ALU/: alu.cpp  alu.h
CPU/Cache/: cache.cpp  cache.h
CPU/Pipeline/: pipeline.cpp  pipeline.h
CPU/Register/: register.cpp  register.h
DebugTools/: printer.cpp  printer.h
ISA/: instruction.cpp  instruction.h
Memory/: memory.cpp  memory.h
Statistics/: statistics.cpp  statistics.h
Visualization/: visual.txt  visual_improved_stall.txt  viz.html  viz2.html
ZJX_Document/: RISCV-Stage1.md  指令集说明.md
